syntax = "proto3";

package Authentication;

service Auth {
    //test
    rpc test(testrequest) returns (testresponse) {}

    rpc signIn(signInDetails) returns (userResponse){}
    rpc signUp(signupDetails) returns (success) {}
    rpc verify(verifyRequest) returns (verifyResponse) {}
    rpc getMe(getUserRequest) returns (verifyResponse) {}
    rpc update(usernameUpdate) returns (verifyResponse) {}

}

//test message
message testrequest {
    string message = 1;
}
// test end
message testresponse {
    string message = 1;
}

message signInDetails {
    string phone = 1;
    string password = 2;
}

message loginDetails {
    string email = 1;
    string password = 2;
}

message signupDetails {
    string phone = 1;
    string password = 2;
    string name = 3;
    string code = 4;
    string post = 5;
    string avatar = 6;
}

message verifyRequest {
    string token = 1;

}

message success {
    string status = 1;
    string message = 2;
}

message userResponse {
    string status = 1;
    string token = 2;
    string message = 3;
}

message verifyResponse {
    int32 id =1;
    string name = 2;
    string phone = 3;
}

message getUserRequest {
    int32 id = 1;   
}

message usernameUpdate{
    int32 id = 1;
    string username = 2;
}